[package]
name = "image-upload"
version = "0.1.0"
authors = ["Arpan Dhatt <ary.dhatt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="3"
futures="0.3"
actix-files="0.3"
dotenv="*"
env_logger="*"
serde="1"
sanitize-filename = "0.3.0"
rand="*"
